# quant_system_327

./: .env  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run.py  分支切分与灰色模块治理方案.md
adapters/: README.md
adapters/joinquant/: jq_context_adapter.py  jq_data_adapter.py  jq_entry.py  jq_order_adapter.py  jq_scheduler_adapter.py
adapters/local/: local_broker_simulator.py  local_context.py  local_data_feed.py  local_engine.py  local_event_loop.py
adapters/shared/: README.md  __init__.py
adapters/trading/: README.md  __init__.py
application/shared/: __init__.py  backtest_app.py  data_app.py  factor_app.py  ic_app.py
backtest/: README.md
core/: README.md
core/common/: __init__.py  (+3 more)
data/: README.md  __init__.py
docs/: CMD.md  arch_commond.md  architecture.md  backtest_ownership.md  branch_split_checklist.md  branch_split_execution_steps.md  chatgpt.md  command_grouping.md  config_layering.md  data_contracts.md  data_service_boundary.md  research_asset_ownership.md  shared_foundation_boundary.md  shared_test_strategy.md  storage_partitioning.md
exceptions/: __init__.py  base.py  config.py  data.py  pipeline.py
execution/: README.md
features/: README.md  loader.py
infra/: README.md
models/: README.md
pipelines/: __init__.py  backtest_pipeline.py  data_pipeline.py  factor_pipeline.py  ic_pipeline.py
portfolio/: README.md
risk/: README.md  risk_manager.py
scripts/: README.md  run.py  run_backtest.py  run_jq.py  run_live.py  update_data.py
tests/: README.md  conftest.py
utils/: __init__.py  result_metadata.py  run_tracker.py
(+115 files in other folders)
